--- a/open.css
+++ b/open.css
@@ -4,7 +4,7 @@ body {
   width: 100vw;
   height: 100vh;
 
-  background-image: linear-gradient(0deg, #e87d7d 0%, #11a4ff 100%);
+  background-image: url("DALL·E 2024-01-23 21.49.41 - An anime-style illustration of a bunny and a squirrel under a cherry blossom tree at midnight, with reduced lighting for a darker ambiance and enhance.png");
 }
 
 #envelope {
